manifests/ingress-nginxa.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-nginxa
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    cert-manager.io/issuer: "selfsigned-issuer"
spec:
  rules:
  - host: nginx.trn.cloudify.co
    http:
      paths:
      - path: /routea
        backend:
          serviceName: nginxa
          servicePort: 80
  tls:
  - hosts:
    - nginx.trn.cloudify.co
    secretName: nginxa-secret
