manifests/ingress-nginxb.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-nginxb
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    cert-manager.io/issuer: "selfsigned-issuer"
spec:
  rules:
  - host: nginx.your-domain.com
    http:
      paths:
      - path: /routeb
        backend:
          serviceName: nginxb
          servicePort: 80
  tls:
  - hosts:
    - nginx.your-domain.com
    secretName: nginxb-secret
